update: `instalment.mdx`

--- a/src/markdown/instalment.mdx
+++ b/src/markdown/instalment.mdx
@@ -4,10 +4,10 @@ import { Text } from '~/components/ui/text'
 
 <Text
 	as="span"
-	size={20}
+	size="md"
 >
-	Мы понимаем, что инвестиции в создание сайта или приложения могут быть значительным финансовым шагом для вашего
-	бизнеса. Поэтому мы рады предложить вам удобную возможность — рассрочку на разработку!
+	Мы понимаем, что инвестиции в создание сайта или приложения могут быть <br /> значительным финансовым шагом для
+	вашего бизнеса. Поэтому мы рады предложить вам удобную возможность — рассрочку на разработку!
 </Text>
 
 **Что мы предлагаем:**
@@ -27,5 +27,6 @@ import { Text } from '~/components/ui/text'
 2. Согласование условий: Мы вместе утвердим график платежей и начнем работу над вашим проектом.
 3. Разработка: Получайте качественный продукт в удобное время и оплачивайте его поэтапно.
 
-**Мы стремимся сделать процесс создания сайта или приложения максимально комфортным и доступным для вас. Начните сотрудничество с нами и воспользуйтесь преимуществами гибкой оплаты!
+**Мы стремимся сделать процесс создания сайта или приложения максимально комфортным и <br/>
+доступным для вас. Начните сотрудничество с нами и воспользуйтесь преимуществами гибкой оплаты!
 Свяжитесь с нами сегодня, чтобы узнать больше и обсудить детали.**
