update: `seo.mdx` check-circle-icon

--- a/src/markdown/services/promotion/seo.mdx
+++ b/src/markdown/services/promotion/seo.mdx
@@ -1,6 +1,6 @@
 import { Card } from '~/components/ui/card'
 import { Spacer } from '~/components/ui/spacer'
-import { CheckIcon } from '~/components/ui/icons/check-icon'
+import { CheckCircleIcon } from '~/components/ui/icons/check-circle-icon'
 
 Не все конкуренты полностью оптимизируют свои веб-ресурсы, поэтому грамотно проведенная SEO-оптимизация дает
 вам отличные шансы на завоевание органического трафика в будущем.Когда следует начинать SEO? Чем раньше начнете, тем лучше.
@@ -57,7 +57,7 @@ import { CheckIcon } from '~/components/ui/icons/check-icon'
 			description={item}
 			size="sm"
 			variant="shadow"
-			startContent={<CheckIcon />}
+			startContent={<CheckCircleIcon />}
 		/>
 	))}
 </div>
