--- a/src/markdown/services/promotion/smm.mdx
+++ b/src/markdown/services/promotion/smm.mdx
@@ -32,7 +32,9 @@ import { Spacer } from '~/components/ui/spacer'
             {...item}
     		size="sm"
     		variant="outlined"
-    	/>
+		>
+			{item.description}
+		</Card>
     ))}
 
 </div>
