--- a/src/markdown/services/promotion/seo.mdx
+++ b/src/markdown/services/promotion/seo.mdx
@@ -16,7 +16,7 @@ import { CheckCircleIcon } from '~/components/ui/icons/check-circle-icon'
 
 <Spacer y="2rem" />
 
-<div className="grid grid-cols-3 gap-1.5">
+<div className="grid grid-cols-1 gap-1.5 md:grid-cols-3">
 	{[
 		'Ваш сайт увидит большее количество потенциальных клиентов',
 		'Сайт будет индексироваться без ошибок',
@@ -37,7 +37,7 @@ import { CheckCircleIcon } from '~/components/ui/icons/check-circle-icon'
 
 <Spacer y="2rem" />
 
-<div className="grid grid-cols-2 gap-1.5">
+<div className="grid grid-cols-1 md:grid-cols-2 gap-1.5">
 	{[
 		'Анализ тематики сайта',
 		'Подключение сертификата безопасности SSL',
