--- a/src/markdown/services/promotion/target.mdx
+++ b/src/markdown/services/promotion/target.mdx
@@ -10,7 +10,7 @@ import { Spacer } from '~/components/ui/spacer'
 
 <Spacer y="1.25rem" />
 
-<div className="grid grid-cols-2 gap-1.5">
+<div className="grid grid-cols-1 gap-1.5 md:grid-cols-2">
 	{[
 		'Сбор семантического ядра',
 		'Анализ объявлений конкурентов',
