--- a/src/markdown/services/promotion/smm.mdx
+++ b/src/markdown/services/promotion/smm.mdx
@@ -9,7 +9,7 @@ import { Spacer } from '~/components/ui/spacer'
 
 <Spacer y="1.25rem" />
 
-<div className="grid grid-cols-3 gap-1.5">
+<div className="grid grid-cols-1 md:grid-cols-3 gap-1.5">
 	{[
 		{
 			title: 'Увеличение охвата и видимости',
@@ -45,7 +45,7 @@ import { Spacer } from '~/components/ui/spacer'
 
 <Spacer y="2rem" />
 
-<div className="grid grid-cols-2 gap-1.5">
+<div className="grid grid-cols-1 gap-1.5 md:grid-cols-2">
 	{[
 		'Аудит и конкурентный анализ',
 		'Стратегия продвижения',
