--- a/src/markdown/instalment.mdx
+++ b/src/markdown/instalment.mdx
@@ -1,31 +1,46 @@
 import { Text } from '~/components/ui/text'
+import { Spacer } from '~/components/ui/spacer'
 
 #### Предоставляем собственную рассрочку
 
-<Text
-	as="span"
-	size="md"
->
-	Мы понимаем, что инвестиции в создание сайта или приложения могут быть <br /> значительным финансовым шагом для
-	вашего бизнеса. Поэтому мы рады предложить вам удобную возможность — рассрочку на разработку!
-</Text>
+<Spacer y="1.5rem" />
+
+###### Мы понимаем, что инвестиции в создание сайта или приложения могут быть
+
+###### значительным финансовым шагом для вашего бизнеса. Поэтому мы рады предложить
+
+###### вам удобную возможность — рассрочку на разработку!
+
+<Spacer y="1.5rem" />
 
 **Что мы предлагаем:**
+
+<Spacer y="1rem" />
 
 - Гибкий график платежей: Вы можете выбрать наиболее удобный для вас план оплаты. Мы предлагаем несколько вариантов, чтобы вы могли выбрать оптимальный для вашего бюджета.
 - Без скрытых платежей: Вся информация о платежах прозрачна, и мы гарантируем отсутствие скрытых сборов или дополнительных затрат.
 
+<Spacer y="1.5rem" />
+
 **Преимущества рассрочки:**
+
+<Spacer y="1rem" />
 
 - Удобство: Платите частями, не выходя за рамки бюджета.
 - Безопасность: Вы сможете спокойно следить за процессом разработки и быть уверенными, что проект движется в нужном направлении.
 - Поддержка: Наша команда всегда готова поддержать вас и предоставить консультации на каждом этапе.
 
+<Spacer y="1.5rem" />
+
 **Как начать:**
+
+<Spacer y="1rem" />
 
 1. Свяжитесь с нами: Обсудите ваши потребности и выберите подходящий план оплаты.
 2. Согласование условий: Мы вместе утвердим график платежей и начнем работу над вашим проектом.
 3. Разработка: Получайте качественный продукт в удобное время и оплачивайте его поэтапно.
+
+<Spacer y="1.5rem" />
 
 **Мы стремимся сделать процесс создания сайта или приложения максимально комфортным и <br/>
 доступным для вас. Начните сотрудничество с нами и воспользуйтесь преимуществами гибкой оплаты!
