--- a/src/markdown/services/design/design-process.mdx
+++ b/src/markdown/services/design/design-process.mdx
@@ -3,8 +3,8 @@ import { Spacer } from '~/components/ui/spacer'
 
 ### Процесс проектирования
 
-<Spacer y="1rem" />
+<Spacer y="md" />
 
 ##### Позволяет найти лучшее решение для вашего бизнеса
 
-<Spacer y="2rem" />
+<Spacer y="xl" />
