--- a/src/markdown/services/promotion/seo.mdx
+++ b/src/markdown/services/promotion/seo.mdx
@@ -5,16 +5,16 @@ import { CheckCircleIcon } from '~/components/ui/icons/check-circle-icon'
 Не все конкуренты полностью оптимизируют свои веб-ресурсы, поэтому грамотно проведенная SEO-оптимизация дает
 вам отличные шансы на завоевание органического трафика в будущем.Когда следует начинать SEO? Чем раньше начнете, тем лучше.
 
-<Spacer y="2rem" />
+<Spacer y="xl" />
 
 ##### Для чего нужна SEO?
 
-<Spacer y="1.25rem" />
+<Spacer y="md" />
 
 Это работы по внутренней технической и поисковой оптимизации сайта, направленные на улучшение его видимости в поисковых системах.
 Они способствуют росту позиций ключевых фраз и увеличению поискового трафика из Яндекс и Google, при этом не требуют постоянного продвижения проекта.
 
-<Spacer y="2rem" />
+<Spacer y="xl" />
 
 <div className="grid grid-cols-1 gap-1.5 md:grid-cols-3">
 	{[
@@ -31,11 +31,11 @@ import { CheckCircleIcon } from '~/components/ui/icons/check-circle-icon'
 	))}
 </div>
 
-<Spacer y="2rem" />
+<Spacer y="xl" />
 
 ##### Процесс оптимизации сайта:
 
-<Spacer y="2rem" />
+<Spacer y="xl" />
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-1.5">
 	{[
@@ -65,6 +65,6 @@ import { CheckCircleIcon } from '~/components/ui/icons/check-circle-icon'
 
 </div>
 
-<Spacer y="2rem" />
+<Spacer y="xl" />
 
 ##### Базовая настройка SEO в ходит в услугу разработки сайта «Под ключ»
