--- a/src/markdown/instalment.mdx
+++ b/src/markdown/instalment.mdx
@@ -2,44 +2,40 @@ import { Spacer } from '~/components/ui/spacer'
 
 #### Предоставляем собственную рассрочку
 
-<Spacer y="1.5rem" />
+<Spacer y="lg" />
 
-###### Мы понимаем, что инвестиции в создание сайта или приложения могут быть
+###### Мы понимаем, что инвестиции в создание сайта или приложения могут быть <br /> значительным финансовым шагом для вашего бизнеса. Поэтому мы рады предложить <br /> вам удобную возможность — рассрочку на разработку!
 
-###### значительным финансовым шагом для вашего бизнеса. Поэтому мы рады предложить
-
-###### вам удобную возможность — рассрочку на разработку!
-
-<Spacer y="1.5rem" />
+<Spacer y="lg" />
 
 **Что мы предлагаем:**
 
-<Spacer y="1rem" />
+<Spacer y="md" />
 
 - Гибкий график платежей: Вы можете выбрать наиболее удобный для вас план оплаты. Мы предлагаем несколько вариантов, чтобы вы могли выбрать оптимальный для вашего бюджета.
 - Без скрытых платежей: Вся информация о платежах прозрачна, и мы гарантируем отсутствие скрытых сборов или дополнительных затрат.
 
-<Spacer y="1.5rem" />
+<Spacer y="lg" />
 
 **Преимущества рассрочки:**
 
-<Spacer y="1rem" />
+<Spacer y="md" />
 
 - Удобство: Платите частями, не выходя за рамки бюджета.
 - Безопасность: Вы сможете спокойно следить за процессом разработки и быть уверенными, что проект движется в нужном направлении.
 - Поддержка: Наша команда всегда готова поддержать вас и предоставить консультации на каждом этапе.
 
-<Spacer y="1.5rem" />
+<Spacer y="lg" />
 
 **Как начать:**
 
-<Spacer y="1rem" />
+<Spacer y="md" />
 
 1. Свяжитесь с нами: Обсудите ваши потребности и выберите подходящий план оплаты.
 2. Согласование условий: Мы вместе утвердим график платежей и начнем работу над вашим проектом.
 3. Разработка: Получайте качественный продукт в удобное время и оплачивайте его поэтапно.
 
-<Spacer y="1.5rem" />
+<Spacer y="lg" />
 
 **Мы стремимся сделать процесс создания сайта или приложения максимально комфортным и <br/>
 доступным для вас. Начните сотрудничество с нами и воспользуйтесь преимуществами гибкой оплаты!
