:sparkles: Add DesignPage

--- a/src/markdown/services/design/design-process.mdx
+++ b/src/markdown/services/design/design-process.mdx
@@ -1,5 +1,7 @@
 import { Card } from '~/components/ui/card'
 import { Spacer } from '~/components/ui/spacer'
+import { Text } from '~/components/ui/text'
+import { Button } from '~/components/ui/button'
 
 ### Процесс проектирования
 
@@ -8,3 +10,134 @@ import { Spacer } from '~/components/ui/spacer'
 ##### Позволяет найти лучшее решение для вашего бизнеса
 
 <Spacer y="xl" />
+
+<section className="grid gap-6">
+	{[
+		{
+			title: 'Исследования',
+			content: 'Используя SWOT-анализ, мы оценим стратегии ваших наиболее эффективных конкурентов. Затем мы выясним, как воспользоваться их сильными и слабыми сторонами.',
+			characteristics: [
+				{
+					title: 'UX-исследования',
+					content: 'Это стартовая площадка для каждого проекта. Здесь мы анализируем ваш текущий продукт, конкурентов и целевой рынок. Затем мы объединяем все эти аспекты вместе, чтобы создать карту сайта и список UX-функций, над которыми можно работать.',
+					resulttitle: 'Результат:',
+					resultcontent:
+						'Карта сайта ・Основные выводы по улучшению UX (опыта пользователей)・SWOT-анализ',
+				},
+				{
+					title: 'UX-стратегия',
+					content: 'Область применения стратегии UX варьируется от одного продукта, услуги или функции до нескольких продуктов и услуг. Сильная стратегия гарантирует, что информация, ориентированная на пользователя, будет интегрирована в бизнес-план.',
+					resulttitle: 'Результат:',
+					resultcontent:
+						'План действий, предназначенный для улучшения UX в течение установленного периода времени.',
+				},
+			],
+		},
+		{
+			title: 'Проектирование',
+			content: 'Превратите результаты анализа в удобные страницы и блоки, соответствующие общепринятым правилам юзабилити и конвертирующие посетителей в клиентов.',
+			characteristics: [
+				{
+					title: 'Каркасы(Wireframes)',
+					content: 'Этот этап помогает нам понять логику и структуру будущего сервиса. Мы создаем и утверждаем прототипы для каждого отдельного потока.',
+					resulttitle: 'Результат:',
+					resultcontent:
+						'Каркасный прототип для полного понимания логики и структуры будущего сервиса.',
+				},
+				{
+					title: 'Кликабельные прототипы',
+					content: 'Используя кликабельный прототип, мы можем продемонстрировать и протестировать, как веб-сайт на самом деле будет вести себя в условиях, близких к реалистичным.',
+					resulttitle: 'Результат:',
+					resultcontent:
+						'План действий, предназначенный для улучшения UX в течение установленного периода времени.',
+				},
+			],
+		},
+		{
+			title: 'Дизайн интерфейса',
+			content: 'Это та часть, где начинается волшебство. Начинаем с мудборда и дизайн-концепции будущего дизайна. После этого мы создаем дизайн пользовательского интерфейса для всего проекта и делаем UI-кит или систему дизайна для разработчиков.',
+			characteristics: [
+				{
+					title: 'Мудборд',
+					content: 'Для определения визуального направления и стиля интерфейса наша команда создает мудборды и согласовывает их с клиентом. Это позволяет выбрать наиболее подходящее решение на самых ранних этапах и избежать набрасывания многочисленных доработок на этапе проектирования, когда кардинальные изменения направления занимают много времени.',
+					resulttitle: 'Результат:',
+					resultcontent: 'Мудборд для выбора подходящего визуального направления.',
+				},
+				{
+					title: 'Дизайн-концепция',
+					content: 'На основе исследований и выбранного в мудбордах направления мы создаем первую визуальную концепцию сайта, чтобы продемонстрировать выбранный стиль в реальных условиях перед созданием готового дизайна пользовательского интерфейса.',
+					resulttitle: 'Результат:',
+					resultcontent:
+						'Концепция дизайна, помогающая определить визуальное направление.',
+				},
+				{
+					title: 'Дизайн макета',
+					content: 'Собрав всю предыдущую работу, мы приступаем к созданию реального дизайна пользовательского интерфейса, включающего в себя графические элементы, такие как иллюстрации и движение. Эти элементы, которые вскоре будут воплощены в жизнь, шаг за шагом, проверяются с клиентами.',
+					resulttitle: 'Результат:',
+					resultcontent: 'Высококачественные макеты.',
+				},
+				{
+					title: 'Сдача работы заказчику',
+					content: 'После создания UI-дизайна всего проекта мы разрабатываем UI-кит для разработчиков и готовимся к реализации и воплощению проекта в жизнь.',
+					resulttitle: 'Результат:',
+					resultcontent: 'Файл передачи для разработки с UI-kit.',
+				},
+			],
+		},
+		{
+			title: 'Разработка',
+			content: 'Команда разработчиков всегда на связи с дизайнерами, что позволяет нам заранее предотвратить многие возможные проблемы и оперативно закрыть существующие.',
+			characteristics: [
+				{
+					title: 'Разработка без кода',
+					content: 'Откройте для себя легко реализуемое и высокооптимизированное решение для быстрого запуска вашего веб-сайта или создания MVP-версии вашего продукта с минимальными вложениями ресурсов.',
+					resulttitle: '',
+					resultcontent: '',
+				},
+				{
+					title: 'Разработка веб-приложений',
+					content: 'В пользовательском коде нет аспектов того, что возможно, если реализация содержит ценность для бизнеса. Мы помогаем найти уникальные нестандартные решения и предлагаем более простые, но столь же эффективные способы благодаря нашему опыту.',
+					resulttitle: '',
+					resultcontent: '',
+				},
+				{
+					title: 'Разработка мобильного приложения',
+					content: 'Мы предлагаем услуги кроссплатформенной мобильной разработки для создания высококачественных, многофункциональных приложений, которые работают без сбоев. Мы гарантируем опытную команду, индивидуальные решения, удобный дизайн и всестороннее тестирование.',
+					resulttitle: '',
+					resultcontent: '',
+				},
+			],
+		},
+	].map((item, idx) => (
+		<Card
+			key={[idx, 'design'].join('-')}
+			size="md"
+			variant="outlined"
+			title={[idx + 1, item.title].join('. ')}
+		>
+			<Text
+				bold
+				children={item.content}
+			/>
+			<Spacer y="md" />
+			{item.characteristics.map((data, idx) => (
+				<div key={[idx, 'content'].join('-')}>
+					<Text
+						bold
+						children={data.title}
+					/>
+					<Spacer y="md" />
+					<Text children={data.content} />
+					<Spacer y="md" />
+					<Text
+						bold
+						children={data.resulttitle}
+					/>
+					<Spacer y="md" />
+					<Text children={data.resultcontent} />
+					<Spacer y="md" />
+				</div>
+			))}
+		</Card>
+	))}
+</section>
