--- a/src/markdown/services/development/eco.mdx
+++ b/src/markdown/services/development/eco.mdx
@@ -23,7 +23,7 @@ import { ArrowDownIcon } from '~/components/ui/icons/arrow-down-icon'
 			text: 'Даже начинающий контент-менеджер освоит ее очень быстро. Удобные настройки, готовые плагины, нет проблем с тех поддержкой.',
 		},
 	].map((item, idx) => (
-		<div key={idx}>
+		<div key={[idx, 'ecom'].join('-')}>
 			<Text
 				bold
 				as="h5"
