:hammer: Fix warnings with keys of child element

--- a/src/markdown/services/development/chat-bot.mdx
+++ b/src/markdown/services/development/chat-bot.mdx
@@ -115,11 +115,11 @@ description: [
 			content: 'Кнопочные чат-боты находят применение в различных областях благодаря своей универсальности и простоте использования. Они могут эффективно служить в качестве инструментов для проведения опросов, предоставления клиентской поддержки, помощи в выборе продуктов, а также в обучении и тренингах. Разнообразие вариантов использования позволяет адаптировать кнопочные боты под разные потребности и сценарии, делая их ценным ресурсом для различных бизнесов и организаций.',
 		},
 	].map((item, idx) => (
-		<div className="px-5 py-2">
-			<ul
-				key={[idx, 'buttonchatbot'].join('-')}
-				className="list-disc"
-			>
+		<div
+			className="px-5 py-2"
+			key={[idx, 'buttonchatbot'].join('-')}
+		>
+			<ul className="list-disc">
 				<li>
 					<strong>{item.title}</strong>
 				</li>
@@ -156,11 +156,11 @@ description: [
 			content: 'Чат-боты можно интегрировать с различными базами данных, что расширяет их возможности. Такая интеграция позволяет ботам получать доступ к актуальной информации, управлять данными и выполнять сложные задачи, такие как поиск информации или обновление записей. Это делает чат-ботов более полезными и эффективными инструментами для автоматизации бизнес-процессов и обработки запросов клиентов.',
 		},
 	].map((item, idx) => (
-		<div className="px-5 py-2">
-			<ul
-				key={[idx, 'keywords'].join('-')}
-				className="list-disc"
-			>
+		<div
+			className="px-5 py-2"
+			key={[idx, 'keywords'].join('-')}
+		>
+			<ul className="list-disc">
 				<li>
 					<strong>{item.title}</strong>
 				</li>
