--- a/src/markdown/legalMarkdown.mdx
+++ b/src/markdown/legalMarkdown.mdx
@@ -1,125 +1,57 @@
 import { Text } from '~/components/ui/text'
 import { Link } from '~/components/ui/link'
 import { Spacer } from '~/components/ui/spacer'
-import { Section } from '~/components/(sections)'
 
-<Text
-	bold
-	as="h5"
-	id="cookies"
->
-	Что такое файлы cookie?
-</Text>
+##### Что такое файлы cookie?
 
 <Spacer y="xl" />
-<Text>
-	Файлы cookie — это небольшие текстовые файлы, которые используются для хранения небольших фрагментов информации.
-	Файлы сookie, как правило,  собираются, систематизируются, хранятся, изменяются, используются, обезличиваются,
-	блокируются, удаляются с использованием средств автоматизации. Файлы cookie сохраняются на вашем устройстве, в
-	тот момент, когда когда загружается в вашем браузере интернет-сайт  ООО "Экселлент Софт" (esoft.by, далее —
-	сайт). Эти файлы cookie помогают нам обеспечить правильную работу веб-сайта, сделать веб-сайт более безопасным,
-	улучшить пользовательский опыт и понять, как работает веб-сайт, а также проанализировать, что работает, а что
-	требует улучшения.
-</Text>
+
+Файлы cookie — это небольшие текстовые файлы, которые используются для хранения небольших фрагментов информации.
+Файлы сookie, как правило,  собираются, систематизируются, хранятся, изменяются, используются, обезличиваются,
+блокируются, удаляются с использованием средств автоматизации. Файлы cookie сохраняются на вашем устройстве, в
+тот момент, когда когда загружается в вашем браузере интернет-сайт  ООО "Экселлент Софт" (esoft.by, далее —
+сайт). Эти файлы cookie помогают нам обеспечить правильную работу веб-сайта, сделать веб-сайт более безопасным,
+улучшить пользовательский опыт и понять, как работает веб-сайт, а также проанализировать, что работает, а что
+требует улучшения.
+
 <Spacer y="3xl" />
-<Text
-	bold
-	as="h5"
-	id="why-cookies"
->
-	Зачем мы обрабатываем файлы cookie?
-</Text>
+
+##### Зачем мы обрабатываем файлы cookie?
 
 <Spacer y="xl" />
-<Text>
-	Как и большинство онлайн-сервисов, наш сайт использует файлы cookie для различных целей. Файлы cookie в основном
-	необходимы для правильной работы сайта, и они не собирают никаких ваших персональных данных.
-</Text>
-<Spacer y="md" />
-<Text>
-	Файлы cookie на нашем сайте используются в основном для понимания того, как работает сайт, как вы
-	взаимодействуете с нашим сайтом, для обеспечения безопасности наших услуг, предоставления рекламы, которая вам
-	актуальна, и в целом для предоставления вам улучшенного пользовательского опыта и ускорения вашего будущего
-	взаимодействия с нашим сайтом.
-</Text>
-<Spacer y="3xl" />
-<Text
-	bold
-	as="h5"
-	id="how-cookies"
->
-	Как настроить блокировку или включить уведомления об обработке файлов cookie?
-</Text>
-<Spacer y="xl" />
-<Text>
-	Ниже мы приведём список ссылок (ссылки являются внешними), по которым вы сможете настроить свои браузеры в
-	отношении блокировки и/или уведомлений о файлах cookie.
-</Text>
+
+Как и большинство онлайн-сервисов, наш сайт использует файлы cookie для различных целей. Файлы cookie в основном
+необходимы для правильной работы сайта, и они не собирают никаких ваших персональных данных.
 
 <Spacer y="md" />
 
-<div className=" space-y-2">
-	{[
-		{
-			name: '[Firefox]',
-			url: 'https://support.mozilla.org/ru/kb/udalenie-kukov-dlya-udaleniya-informacii-kotoruyu-',
-		},
-		{
-			name: '[Chrome]',
-			url: 'https://support.google.com/chrome/answer/95647?hl=ru',
-		},
-		{
-			name: '[Opera]',
-			url: 'https://help.opera.com/ru/latest/web-preferences/#Управление-файлами-cookie',
-		},
-		{
-			name: '[Safari]',
-			url: 'https://support.apple.com/ru-ru/guide/safari/sfri11471/mac',
-		},
-		{
-			name: '[Microsoft Edge]',
-			url: 'https://support.microsoft.com/ru-ru/microsoft-edge/удаление-файлов-cookie-в-microsoft-edge-63947406-40ac-c3b8-57b9-2a946a29ae09',
-		},
-		{
-			name: '[Internet Explorer]',
-			url: 'https://support.microsoft.com/ru-ru/windows/удаление-файлов-cookie-и-управление-ими-168dab11-0753-043d-7c16-ede5947fc64d',
-		},
-	].map((browser) => (
-		<div
-			key={browser.name}
-			className="flex flex-col gap-y-1"
-		>
-			<Text>{browser.name}</Text>
-			<Link
-				href={browser.url}
-				variant="underline"
-				className="block max-w-xs whitespace-normal hover:whitespace-normal hover:outline-none focus:whitespace-normal focus:outline-none focus-visible:whitespace-normal focus-visible:outline-none md:max-w-full"
-			>
-				({browser.url})
-			</Link>
-		</div>
-	))}
-</div>
+Файлы cookie на нашем сайте используются в основном для понимания того, как работает сайт, как вы
+взаимодействуете с нашим сайтом, для обеспечения безопасности наших услуг, предоставления рекламы, которая вам
+актуальна, и в целом для предоставления вам улучшенного пользовательского опыта и ускорения вашего будущего
+взаимодействия с нашим сайтом.
 
 <Spacer y="3xl" />
 
-<Text
-	bold
-	as="h5"
-	id="privacy-policy"
->
-	Политика конфиденциальности
-</Text>
+##### Как настроить блокировку или включить уведомления об обработке файлов cookie?
+
 <Spacer y="xl" />
 
-    <p>
-    	С нашей политикой конфиденциальности вы можете ознакомиться
-    	<Link
-    		href="#"
-    		download="privacy-policy.pdf"
-    		variant="underline"
-    	>
-    		здесь.
-    	</Link>
+Ниже мы приведём список ссылок (ссылки являются внешними), по которым вы сможете настроить свои браузеры в
+отношении блокировки и/или уведомлений о файлах cookie.
 
-    </p>
+<Spacer y="md" />
+
+- [Firefox](https://support.mozilla.org/ru/kb/kuki-informaciya-kotoruyu-veb-sajty-hranyat-na-vas)
+- [Chrome](https://support.google.com/chrome/answer/95647?hl=ru)
+- [Opera](https://blogs.opera.com/news/2015/08/how-to-manage-cookies-in-opera)
+- [Safari](https://support.apple.com/ru-ru/guide/safari/ibrw850f6c51/mac)
+- [Microsoft Edge](https://support.microsoft.com/ru-ru/windows/%D1%83%D0%BF%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5-%D1%84%D0%B0%D0%B9%D0%BB%D0%B0%D0%BC%D0%B8-cookie-%D0%B2-microsoft-edge-%D0%BF%D1%80%D0%BE%D1%81%D0%BC%D0%BE%D1%82%D1%80-%D1%80%D0%B0%D0%B7%D1%80%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B1%D0%BB%D0%BE%D0%BA%D0%B8%D1%80%D0%BE%D0%B2%D0%BA%D0%B0-%D1%83%D0%B4%D0%B0%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B8-%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5-168dab11-0753-043d-7c16-ede5947fc64)
+- [Internet Explorer](https://support.microsoft.com/en-gb/topic/description-of-cookies-ad01aa7e-66c9-8ab2-7898-6652c100999d)
+
+<Spacer y="3xl" />
+
+##### Политика конфиденциальности
+
+<Spacer y="xl" />
+
+С нашей политикой конфиденциальности вы можете ознакомиться [здесь.](/legal/privacy-policy.pdf)
