--- a/src/markdown/contact/section.mdx
+++ b/src/markdown/contact/section.mdx
@@ -7,6 +7,7 @@ import { Button } from '~/components/ui/button'
 import { ArrowDownIcon } from '~/components/ui/icons/arrow-down-icon'
 
 import { ContactGroup } from '~/components/contact-group'
+import { RequisitesButton } from '~/components/(buttons)/requisites-button'
 
 ### Контакты
 
@@ -24,16 +25,7 @@ import { ContactGroup } from '~/components/contact-group'
 
 <Spacer y="md" />
 
-<div className="flex items-center gap-x-3">
-	<span>Скачать реквизиты</span>
-	<Button
-		size="icon"
-		variant="shadow"
-    >
-    	<ArrowDownIcon size="1.25em" />
-    </Button>
-
-</div>
+<RequisitesButton />
 
 <Spacer y="md" />
 
