:ambulance: General Fixes

--- a/src/markdown/contact/section.mdx
+++ b/src/markdown/contact/section.mdx
@@ -19,6 +19,10 @@ import { RequisitesButton } from '~/components/(buttons)/requisites-button'
 
 <Spacer y="md" />
 
+Тел.: [{contactConfig.phone.value}]()
+
+<Spacer y="md" />
+
 Для сотрудничества и резюме: <br />
 
 [{contactConfig.email.value}]()
