--- a/src/markdown/contact/section.mdx
+++ b/src/markdown/contact/section.mdx
@@ -13,7 +13,11 @@ import { RequisitesButton } from '~/components/(buttons)/requisites-button'
 
 <Spacer y="md" />
 
-**Минск**
+Работаем по всему СНГ
+
+<Spacer y="md" />
+
+**г. Минск**
 
 ул. Я Коласа, д. 73/3, пом. 1
 
