--- a/src/markdown/payment.mdx
+++ b/src/markdown/payment.mdx
@@ -1,10 +1,6 @@
 import { Spacer } from '~/components/ui/spacer'
 
-#### Предоставляем собственную рассрочку
-
-<Spacer y="lg" />
-
-###### Мы понимаем, что инвестиции в создание сайта или приложения могут быть <br /> значительным финансовым шагом для вашего бизнеса. Поэтому мы рады предложить <br /> вам удобную возможность — рассрочку на разработку!
+**Мы понимаем, что инвестиции в создание сайта или приложения могут быть значительным финансовым <br /> шагом для вашего бизнеса. Поэтому мы рады предложить вам удобную возможность — рассрочку на <br /> разработку!**
 
 <Spacer y="lg" />
 
@@ -13,6 +9,8 @@ import { Spacer } from '~/components/ui/spacer'
 <Spacer y="md" />
 
 - Гибкий график платежей: Вы можете выбрать наиболее удобный для вас план оплаты. Мы предлагаем несколько вариантов, чтобы вы могли выбрать оптимальный для вашего бюджета.
+     {' '}
+     <Spacer y="md" />
 - Без скрытых платежей: Вся информация о платежах прозрачна, и мы гарантируем отсутствие скрытых сборов или дополнительных затрат.
 
 <Spacer y="lg" />
@@ -22,7 +20,15 @@ import { Spacer } from '~/components/ui/spacer'
 <Spacer y="md" />
 
 - Удобство: Платите частями, не выходя за рамки бюджета.
+
+     {' '}
+     <Spacer y="md" />
+
 - Безопасность: Вы сможете спокойно следить за процессом разработки и быть уверенными, что проект движется в нужном направлении.
+
+     {' '}
+     <Spacer y="md" />
+
 - Поддержка: Наша команда всегда готова поддержать вас и предоставить консультации на каждом этапе.
 
 <Spacer y="lg" />
@@ -32,7 +38,15 @@ import { Spacer } from '~/components/ui/spacer'
 <Spacer y="md" />
 
 1. Свяжитесь с нами: Обсудите ваши потребности и выберите подходящий план оплаты.
+
+      {' '}
+      <Spacer y="md" />
+
 2. Согласование условий: Мы вместе утвердим график платежей и начнем работу над вашим проектом.
+
+      {' '}
+      <Spacer y="md" />
+
 3. Разработка: Получайте качественный продукт в удобное время и оплачивайте его поэтапно.
 
 <Spacer y="lg" />
