➕ Add links and minor fixies

--- a/src/markdown/web_3/stack.mdx
+++ b/src/markdown/web_3/stack.mdx
@@ -1,5 +1,5 @@
 import { Spacer } from '~/components/ui/spacer'
-import { Button } from '~/components/ui/button'
+import { ContactButton } from '~/components/(buttons)/contact-button'
 
 ##### Можем:
 
@@ -11,4 +11,4 @@ Blockchain
 Технологии Web 3.0
 <Spacer y="xl" />
 
-<Button variant="default">Заказать консультацию</Button>
+<ContactButton variant="default">Заказать консультацию</ContactButton>
