--- a/src/markdown/web_3/ui-service.mdx
+++ b/src/markdown/web_3/ui-service.mdx
@@ -1,5 +1,5 @@
 import { Spacer } from '~/components/ui/spacer'
-import { Button } from '~/components/ui/button'
+import { ContactButton } from '~/components/(buttons)/contact-button'
 
 Мы полностью берем на себя процесс создания вашего продукта: от формирования концепции или минимально жизнеспособного продукта (MVP) до детальной проработки дизайна и внедрения мельчайших элементов. В результате вы получаете полноценный дизайн для настольных и мобильных устройств, готовый к передаче разработчикам. Мы специализируемся на создании уникальных и ориентированных на пользователя решений для Web 3 проектов, блокчейн-платформ, децентрализованных систем, цифровых кошельков и многого другого.
 
@@ -20,4 +20,4 @@ User Flows и User Journey Maps
 <Spacer y="sm" />
 UX/UI дизайн для десктоп и мобильной версии
 <Spacer y="xl" />
-<Button variant="default">Получить консультацию</Button>
+<ContactButton variant="default">Получить консультацию</ContactButton>
